# lattice-asr

./: .coveragerc.ci  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: performance-baseline.md
src/lattice_asr/: __init__.py  config.py  hardware.py  lid.py  telemetry.py  transcriber.py  types.py
src/lattice_asr/diarize/: __init__.py  base.py  pyannote.py  sortformer.py
src/lattice_asr/engines/: __init__.py  base.py  faster_whisper.py  parakeet_cpp.py  parakeet_mlx.py  parakeet_tdt.py  remote.py  whisper_cpp.py
src/lattice_asr_server/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_config.py  test_hardware.py  test_lid.py  test_module_convenience.py  test_remote_integration.py  test_server.py  test_smoke.py  test_telemetry.py  test_transcriber.py  test_transcriber_selection.py  test_types.py
tests/perf/: test_perf_gates.py
tests/test_diarize/: test_pyannote.py  test_segment_merge.py  test_sortformer.py
tests/test_engines/: test_faster_whisper.py  test_remote.py
